# fpTohdr

./: 256floats.hdr  256floats.txt  CMakeLists.txt
.github/workflows/: build.yml
src/: MainWindow.cpp  MainWindow.h  filesystem.cpp  filesystem.h  main.cpp
